Bug fix: mobile h1 heading too large

--- a/styles.css
+++ b/styles.css
@@ -159,7 +159,9 @@ main {
 }
 
 @media (max-width: 767px) {
-
+    h1 {
+        font-size: 24px;
+    }
     .desktop {
         display: none;
     }
